# HPNL

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  hpnl.conf
example/: CMakeLists.txt
example/connection/: ConBufMgr.h  client.cc  server.cc
example/ping-pong/: client.cc  server.cc
example/pmem/: PingPongBufMgr.h  PmemBufMgr.h  client.cc  server.cc
example/raw/: Makefile  common.h
example/rdm/: PingPongBufMgr.h  client.cc  common.h  server.cc
examples/: CMakeLists.txt
examples/connection/: client.cc  server.cc
examples/ping-pong/: client.cc  server.cc
examples/pmem/: client.cc  server.cc
examples/pmof/: client.cc  server.cc
examples/rdm/: client.cc  server.cc
examples/rma/: client.cc  format.fbs  format_generated.h  server.cc
include/HPNL/: BufMgr.h  CMHandler.cc  CMHandler.h  CMakeLists.txt  CQEventDemultiplexer.h  CQExternalDemultiplexer.h  CQHandler.cc  CQHandler.h  Callback.h  ChunkMgr.h  Client.h  Common.h  ConMgr.h  Config.h  Connection.h  CqDemultiplexer.h  EQEventDemultiplexer.h  EQExternalDemultiplexer.h  EQHandler.h  EqDemultiplexer.h  EqHandler.h  EventDemultiplexer.h  EventHandler.h  EventType.h  ExternalCqDemultiplexer.h  ExternalCqService.h  ExternalEqDemultiplexer.h  ExternalEqService.h  ExternalEqServiceBufMgr.h  FIConnection.cc  FIConnection.h  FIEventDemultiplexer.cc  FIEventDemultiplexer.h  FIStack.cc  FIStack.h  FabricService.h  FiConnection.h  FiStack.h  Handle.h  HpnlBufMgr.h  (+12 more)
java/: CMakeLists.txt
java/hpnl/: hpnl.conf  pom.xml
java/hpnl/src/main/java/com/intel/hpnl/api/: AbstractConnection.java  AbstractHpnlBuffer.java  BufferCache.java  Connection.java  Constants.java  EventTask.java  EventType.java  FrameType.java  Handler.java  HpnlBuffer.java  HpnlBufferAllocator.java  HpnlConfig.java  HpnlFactory.java  HpnlRdmaBuffer.java  HpnlService.java  ReceiveTaskCache.java  ServiceException.java
java/hpnl/src/main/java/com/intel/hpnl/core/: AbstractService.java  Buffer.java  BufferIdManager.java  Connection.java  CqService.java  CqShutdownThread.java  CqThread.java  DynamicSizeBufferAllocator.java  EqServerService.java  EqService.java  EqThread.java  EventTask.java  EventType.java  ExternalHandler.java  FixedSizeBufferAllocator.java  Handler.java  HpnlBuffer.java  HpnlMsgBuffer.java  HpnlNettyBuffer.java  HpnlRdmBuffer.java  MemPool.java  MemoryService.java  MsgConnection.java  MsgHpnlService.java  PortGenerator.java  RdmConnection.java  RdmHandler.java  RdmHpnlService.java  RdmServerService.java  RdmService.java  RdmThread.java  RdmaBuffer.java  TrackedTask.java  Utils.java
java/hpnl/src/main/java/com/intel/hpnl/service/: Client.java  Server.java  Service.java
java/hpnl/src/main/resources/hpnl/: hpnl.conf  libfabric.so.1  libfabric.so.1.10.0
java/hpnl/src/main/resources/hpnl-gni/: hpnl.conf  libfabric.so.1
java/hpnl/src/main/resources/hpnl-omnipath/: hpnl.conf
java/hpnl/src/test/java/com/intel/hpnl/buffer/: Client.java  ConnectedCallback.java  Makefile  PooledBufferTest.java  ReadCallback.java  Server.java  ServerConnectedCallback.java  ShutdownCallback.java  Utils.java  com_intel_hpnl_buffer_Utils.c  com_intel_hpnl_buffer_Utils.h
java/hpnl/src/test/java/com/intel/hpnl/core/: DefaultMethodTest.java  HpnlConfigTest.java  PortGeneratorTest.java  UtilsTest.java
java/hpnl/src/test/java/com/intel/hpnl/pingpong/: Client.java  ClientTest.java  ConnectedCallback.java  ReadCallback.java  RecvCallback.java  (+3 more)
java/hpnl/src/test/resources/: log4j.properties
java/hpnl/src/test/resources/hpnl/: hpnl.conf
java/hpnl/test/ping-pong/: client  client_benchmark  server  server_benchmark
java/native/: com_intel_hpnl_core_Connection.cc  com_intel_hpnl_core_Connection.h  com_intel_hpnl_core_CqService.cc  com_intel_hpnl_core_CqService.h  com_intel_hpnl_core_EqService.cc  com_intel_hpnl_core_EqService.h  com_intel_hpnl_core_MsgConnection.cc  com_intel_hpnl_core_MsgConnection.h  com_intel_hpnl_core_RdmConnection.cc  com_intel_hpnl_core_RdmConnection.h  com_intel_hpnl_core_RdmService.cc  com_intel_hpnl_core_RdmService.h  com_intel_hpnl_core_Utils.cc  com_intel_hpnl_core_Utils.h
src/: CMakeLists.txt  res
src/chunk/: ChunkMgr.cc  ExternalChunkMgr.cc
src/core/: ConMgr.cc  ConMgr.h  Connection.h  ConnectionImpl.h  Constant.h  FIConnection.cc  FIConnection.h  FIStack.cc  FIStack.h  FiConnection.cc  FiConnection.h  FiStack.cc  FiStack.h  MsgConnection.cc  MsgConnection.h  MsgStack.cc  MsgStack.h  RdmConnection.cc  RdmConnection.h  RdmStack.cc  RdmStack.h  Stack.h
src/demultiplexer/: CMHandler.cc  CMHandler.h  CQEventDemultiplexer.cc  CQEventDemultiplexer.h  CQHandler.cc  CQHandler.h  CqDemultiplexer.cc  CqDemultiplexer.h  EQEventDemultiplexer.cc  EQEventDemultiplexer.h  EQHandler.cc  EQHandler.h  EqDemultiplexer.cc  EqDemultiplexer.h  EqHandler.cc  EqHandler.h  EventDemultiplexer.h  EventHandler.h  EventType.h  FIEventDemultiplexer.cc  FIEventDemultiplexer.h  Proactor.cc  Proactor.h  RdmCqDemultiplexer.cc  RdmCqDemultiplexer.h  Reactor.cc  Reactor.h  ThreadWrapper.h
src/external_demultiplexer/: CQExternalDemultiplexer.cc  EQExternalDemultiplexer.cc  ExternalCqDemultiplexer.cc  ExternalCqDemultiplexer.h  ExternalEqDemultiplexer.cc  ExternalEqDemultiplexer.h  ExternalRdmCqDemultiplexer.cc  ExternalRdmCqDemultiplexer.h
src/external_service/: ExternalCqService.h  ExternalEqService.cc  ExternalEqService.h  ExternalEqServiceBufMgr.h  ExternalRdmService.cc  ExternalRdmService.h
src/log/: Log.h  NanoLog.cc  NanoLog.h
src/service/: Client.cc  Server.cc  Service.cc  Service.h
src/test/: ChunkPoolTest.cc  CoreTest.cc  ServiceTest.cc  TestBufMgr.h  coreTest.cc  serviceTest.cc
src/util/: ByteBuffer.cc  ByteBuffer.h  CMHandler.h  CQHandler.cc  CQHandler.h  Callback.h  Common.h  EventHandler.h  Mempool.h  Ptr.h  ThreadWrapper.h
test/: CMakeLists.txt  common.h  server.cc  udp.cc
test/connection/: ConBufMgr.h  client.cc  server.cc
test/ping-pong/: PingPongBufMgr.h  client.cc  server.cc
test/pmem/: PmemBufMgr.h  client.cc  server.cc
test/raw/: client.cc
test/rdm/: client.cc  server.cc
(+50 files in other folders)
